refactor: Organizing Swagger for the correct flow of endpoints
